# sockets

./: CMakeLists.txt  README.md
headers/: client.h  server.h
src/client/: client.cpp
src/server/: server.cpp
